Fix T59958: Blender 2.80 - Removing second Particle System cache causes crash.

Usual DEG tag missing.

Also do not tag/send notifiers when we do not change anything!